File: components/nexus-task-logging/src/test/java/org/sonatype/nexus/logging/task/TaskLogHomeTest.java